# ImEditor

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.IN  PKGBUILD  README.md  TODO.md  imeditor  imeditor.desktop  io.github.ImEditor.json  main.py  menu.py  menubar.ui  meson.build  notes.txt  python3-Pillow.json  requirements.txt  setup.py  snapcraft.yaml
data/: io.github.ImEditor.appdata.xml.in  io.github.ImEditor.desktop.in  io.github.ImEditor.gschema.xml  meson.build
editor/: draw.py  editor.py  tools.py
filters/: base.py
imeditor/: __main__.py  main.py
imeditor/editor/: draw.py  editor.py  image.py  tools.py
imeditor/filters/: base.py
imeditor/interface/: dialog.py  interface.py  menus.json  menus.py  tab.py  tabs.py  tools.py  vars.py
imeditor/tests/: run_tests.py  tools_test.py
interface/: dialog.py  interface.py  interface.ui  menus.json  menus.py  tabs.py  tools.py
po/: LINGUAS  POTFILES  de.po  fr.po  hr.po  imeditor.pot  it.po  meson.build  nl.po  sv.po
src/: imeditor.gresource.xml  imeditor.in  main.py  meson.build
src/editor/: draw.py  editor.py  image.py
src/filters/: base.py
src/imeditor/: imeditor.py  main.py
src/imeditor/editor/: draw.py  editor.py  image.py  tools.py
src/imeditor/filters/: base.py
src/imeditor/interface/: dialog.py  interface.py  tab.py  tools.py
src/interface/: dialog.py  headerbar.py  interface.py  tab.py  tools.py  vars.py  window.py
src/ui/: headerbar.ui  menu.ui  shortcuts.ui  window.ui
